# final-ds-basic

./: .gitignore  README.md  pyproject.toml  regression_1rm_change_plan.md  val_github_data.csv  workout-analysis.ipynb  workout_data.csv
